test/fail/crud-pages.app
//does not exist
application crudpages

  entity Usr {
    username    :: String
  }
 
  define page root(){

  }
  
  derive crud User